Fix padding issues on mobile

--- a/src/styles/_wordpress_overrides.scss
+++ b/src/styles/_wordpress_overrides.scss
@@ -42,15 +42,15 @@ body div#calculator {
   // div#results.ccl_card > div div {
   //   padding: 0 3.67037% !important;
   // }
-  div#results.ccl_card > div {
-    div.impact_panel {
-      padding: 40px 0px 0px 0px !important;
-      margin-top: 40px;
-    }
-    div.share_row {
-      padding: 25px 0 !important;
-    }
-  }
+  // div#results.ccl_card > div {
+  //   div.impact_panel {
+  //     padding: 40px 0px 0px 0px !important;
+  //     margin-top: 40px;
+  //   }
+  //   div.share_row {
+  //     padding: 25px 0 !important;
+  //   }
+  // }
 
   @media (max-width: $screen-sm-min) {
     form-group {
